# 1min-Getway

./: .dockerignore  .env.example  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  commitlint.config.js  docker-compose.yml  main.py  printedcolors.py  pyproject.toml  requirements.txt  run_all_tests.bat  run_all_tests.sh  run_tests.py  setup.cfg
.commitify/: config.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci-cd.yml  dependabot-auto-merge.yml
docs/: API_PARAMETERS.md  CI-CD-CHEATSHEET.md  CI-CD-DOCUMENTATION.md  DEPENDABOT-DOCUMENTATION.md  ENV-DOCKER-GUIDE.md  INTEGRATION-GUIDE.md
src/: __init__.py  config.py  factory.py  routes.py
src/adapters/: openai_adapter.py
src/application/: orchestrator.py
src/domain/: conversation_service.py  image_mapper.py  image_service.py  model_provider.py  model_service.py  models.py  openai_adapter.py  orchestrator.py  session_service.py
src/infrastructure/: __init__.py  asset_service.py  conversation_service.py  error_handler.py  error_service.py  network_service.py  network_utils.py  one_min_client.py  orchestrator.py  token_service.py
tests/: __init__.py  conftest.py  test_error_service.py  test_gateway.py  test_main.py
tests/test_domain/: __init__.py  test_conversation_service.py  test_model_provider.py
tests/test_infrastructure/: __init__.py  test_asset_service.py  test_one_min_client.py  test_token_service.py
