# ============================================================
# pyproject.toml - Configuration centralisée des outils
# ============================================================
# Ce fichier centralise la configuration de tous les outils Python
# utilisés dans le projet (Black, isort, Bandit, pytest, etc.)
# ============================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "1min-gateway"
version = "1.0.0"
description = "1min-Gateway: Intelligent API Gateway for AI models"
authors = [
    {name = "Billel Attafi", email = "billel@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["gateway", "api", "ai", "llm", "proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

# ============================================================
# BLACK - Code formatter
# ============================================================
[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.eggs
  | \.tox
  | \.pytest_cache
  | \.mypy_cache
  | __pycache__
  | logs
  | dist
  | build
)/
'''

# ============================================================
# ISORT - Import sorting
# ============================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "logs",
]

# ============================================================
# PYTEST - Test framework
# ============================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                    # Show all test outcomes
    "--strict-markers",       # Strict marker checking
    "--strict-config",        # Strict config checking
    "--showlocals",           # Show local variables in tracebacks
    "--tb=short",             # Short traceback format
    "--cov=.",                # Coverage for all files
    "--cov-report=term-missing",  # Show missing lines
    "--cov-report=html",      # Generate HTML report
    "--cov-report=xml",       # Generate XML for CI/CD
    "--cov-fail-under=80",    # Fail if coverage < 80%
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "**/__pycache__/*",
    "**/.venv/*",
    "**/venv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ============================================================
# BANDIT - Security linter
# ============================================================
[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "venv",
    "logs",
    "__pycache__",
]
# Skip specific tests
skips = [
    "B101",  # assert_used (OK dans les tests)
]
# Tests à exécuter
tests = [
    "B201", "B301", "B302", "B303", "B304", "B305", "B306",
    "B308", "B310", "B311", "B312", "B313", "B314", "B315",
    "B316", "B317", "B318", "B319", "B320", "B401", "B402",
    "B403", "B404", "B405", "B406", "B407", "B408", "B409",
    "B410", "B411", "B412", "B413", "B501", "B502", "B503",
    "B504", "B505", "B506", "B507", "B601", "B602", "B603",
    "B604", "B605", "B606", "B607", "B608", "B609", "B610",
    "B611", "B701", "B702", "B703"
]

# ============================================================
# MYPY - Static type checker (optionnel)
# ============================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Mettre à true pour strict typing
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "tests",
    "logs",
]

# ============================================================
# FLAKE8 - Linter (configuration alternative, pas dans pyproject.toml nativement)
# ============================================================
# Note: Flake8 ne supporte pas pyproject.toml nativement
# Utilise setup.cfg ou .flake8 à la place
# Ou installer flake8-pyproject

# ============================================================
# RUFF - Alternative moderne à Flake8 (optionnel)
# ============================================================
[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (géré par Black)
    "B008",  # function calls in argument defaults
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "logs",
    "dist",
    "build",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports OK in __init__

# ============================================================
# SEMANTIC-RELEASE (si package.json absent)
# ============================================================
# Note: Semantic Release utilise .releaserc.json
# Cette section est juste pour référence

# ============================================================
# COMMITIZEN (si tu utilises cz au lieu de commitify)
# ============================================================
[tool.commitizen]
name = "cz_gitmoji"
version = "1.0.0"
tag_format = "v$version"
update_changelog_on_bump = true
bump_message = "🔖 chore(release): bump version $current_version → $new_version [skip ci]"
