# ============================================================
# setup.cfg - Configuration pour Flake8
# ============================================================
# Flake8 ne supporte pas pyproject.toml nativement
# Ce fichier contient sa configuration
# ============================================================

[flake8]
max-line-length = 100
max-complexity = 10
# Whitespace before ':' (incompatible avec Black)
# Line break before binary operator (incompatible avec Black)
# Line too long (géré par Black)
extend-ignore =
    E203,
    W503,
    E501,
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg,
    logs,
    dist,
    build,
    .pytest_cache,
    .mypy_cache,
    .tox

# Plugin configurations
# Unused imports OK in __init__.py
# Use of assert (OK dans les tests)
per-file-ignores =
    __init__.py:F401,F403
    tests/*:S101

# Flake8-docstrings configuration
docstring-convention = google

# Flake8-bugbear configuration
extend-immutable-calls =
    fastapi.Depends,
    fastapi.Query,
    fastapi.Path

# ============================================================
# METADATA (optionnel, pour setuptools)
# ============================================================
[metadata]
name = 1min-gateway
version = attr: __version__
description = Intelligent API Gateway for AI models
long_description = file: README.md
long_description_content_type = text/markdown
author = Billel Attafi
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.12
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    tests*
    logs*
